--- a/disasm86.cabal
+++ b/disasm86.cabal
@@ -15,8 +15,9 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Diassembler
   build-depends:       base >= 4.7 && < 5
+                     , bytestring
   default-language:    Haskell2010
 
 source-repository head
