--- a/disasm86.cabal
+++ b/disasm86.cabal
@@ -30,6 +30,8 @@ test-suite test
                       , QuickCheck
                       , hspec
                       , bytestring
+    other-modules:      DisassemblerSpec
+    default-language:   Haskell2010
 
 source-repository head
   type:     git
