Implement REX, O16, A32 prefixes Implement seven more operations Implement direction bit for relevant opcodes Add register text definitions for all GPRs Add multiple random tests against hdis86 reference disassembler

--- a/disasm86.cabal
+++ b/disasm86.cabal
@@ -30,6 +30,8 @@ test-suite test
                       , QuickCheck
                       , hspec
                       , bytestring
+                      , hdis86
+                      , random
     other-modules:      DisassemblerSpec
     default-language:   Haskell2010
 
