--- a/disasm86.cabal
+++ b/disasm86.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Disassembler
+                     , Disassembler.Types
   build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , binary
@@ -33,6 +34,7 @@ test-suite test
                       , hdis86
                       , random
     other-modules:      DisassemblerSpec
+                      , Spec
     default-language:   Haskell2010
 
 source-repository head
