--- a/disasm86.cabal
+++ b/disasm86.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Disassembler
                      , Disassembler.Types
+                     , Disassembler.TextRep.Intel
   build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , binary
