--- a/disasm86.cabal
+++ b/disasm86.cabal
@@ -21,6 +21,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , binary
+                     , containers
   default-language:    Haskell2010
 
 test-suite test
