--- a/disasm86.cabal
+++ b/disasm86.cabal
@@ -22,6 +22,8 @@ library
                      , bytestring
                      , binary
                      , containers
+                     , attoparsec
+                     , transformers
   default-language:    Haskell2010
 
 test-suite test
